<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="130dp"
        android:maxWidth="200dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/busList"
        app:layout_constraintRight_toLeftOf="@id/inputTime"/>

    <TimePicker
        android:id="@+id/inputTime"
        android:layout_width="160dp"
        android:layout_height="90dp"
        android:minWidth="100dp"
        android:minHeight="110dp"
        android:timePickerMode="spinner"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/spinner"
        app:layout_constraintRight_toLeftOf="@id/buttonFind"
        app:layout_constraintBottom_toTopOf="@id/busList"/>

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:maxWidth="120dp"
        android:onClick="findBus"
        android:text="@string/find"
        android:backgroundTint="@color/light"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/inputTime"
        app:layout_constraintBottom_toTopOf="@id/busList"/>

    <Button
        android:id="@+id/buttonChoosing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="130dp"
        android:maxWidth="200dp"
        android:onClick="openFileChooser"
        android:text="@string/choose"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toRightOf="@id/buttonAdd"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="100dp"
        android:maxWidth="130dp"
        android:onClick="addItem"
        android:text="@string/add"
        android:backgroundTint="@color/light"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/buttonChoosing" />

    <ListView
        android:id="@+id/busList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/shadow"
        app:layout_constraintBottom_toTopOf="@+id/buttonChoosing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTime" />

</androidx.constraintlayout.widget.ConstraintLayout>